# OracleResearch

./: .gitignore  Oracle_Architettura.md  README.md  SETUP.md  docker-compose.yml  run.py
archimede/: .env.example  README.md  Struttura Software Archimede.md  pyproject.toml
archimede/archimede/: __init__.py  agent.py  api.py  config.py  log_setup.py  models.py  query.py
archimede/archimede/graph/: __init__.py  chroma_reader.py  reader.py
archimede/archimede/identity/: __init__.py  face_engine.py  matcher.py  name_tag.py
archimede/archimede/presentation/: __init__.py  report.py
archimede/tests/: test_chroma_reader.py  test_face_engine.py  test_graph_reader.py  test_matcher.py  test_query.py  test_report.py
egida/: __init__.py  config.py  filters.py  ner_light.py  pyproject.toml  quarantine.py
egida/tests/: __init__.py  test_filters.py
oracle-rui/: .env.example  CONSTITUTION.md  README.md  chat.html  cli.py  coding_agent.py  future_objective.md  llm_logger.py  model_factory.py  oracle.bat  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements-optional.txt  requirements.txt  system_prompt.md  system_prompt_lite.md  system_prompt_standard.md
oracle-rui/api/: __init__.py  auth.py  rate_limit.py  security.py
oracle-rui/tests/: __init__.py  conftest.py  test_api_auth.py  test_config.py  test_immunity_guardian.py  test_users.db
oracle-rui/tools/: TOOL_REGISTRY.md  __init__.py  chunk_filter.py  constitution.py  environment_probe.py  gmail_client.py  immunity_guardian.py  mcts_engine.py  (+10 more)
penelope/: .env.example  README.md  requirements.txt
(+34 files in other folders)
