[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "egida"
version = "2.0.0"
description = "Egida — Guardrail HSD (4° strato di Oracle)"
requires-python = ">=3.10"

[project.optional-dependencies]
ner = ["spacy>=3.7.0"]
dev  = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
include = ["egida*"]

# Nota: il package si chiama 'egida' (lowercase) per conformita' Python.
# La directory sul filesystem deve essere 'egida/' (gia' rinominata).
